[package]
name = "pardl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.9.0"
async-recursion = "1.0.4"
async-stream = "0.3.5"
bytes = "1.4.0"
circular-buffer = "0.1.1"
clap = { version = "4.3.19", features = ["derive"] }
futures = "0.3.28"
if_chain = "1.0.2"
indicatif = "0.17.5"
indicatif-log-bridge = "0.2.1"
log = "0.4.19"
reqwest = { version = "0.11.18", features = ["blocking", "stream"] }
simplelog = { version = "0.12.1", features = ["paris"] }
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["full"] }
url = "2.4.0"
